--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             justify-content: center;
             gap: 10px;
             z-index: 100;
+            flex-wrap: wrap;
+            padding: 0 20px;
         }
 
         button {
@@ -53,6 +55,9 @@
         <button id="btn-binary">Binary</button>
         <button id="btn-falling">Falling</button>
         <button id="btn-orbital">Orbital</button>
+        <button id="btn-pulse">Pulse</button>
+        <button id="btn-constellation">Constellation</button>
+        <button id="btn-fluid">Fluid</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/p5@1.11.5/lib/p5.min.js"></script>
@@ -61,6 +66,9 @@
     <script src="time/binary.js"></script>
     <script src="time/falling.js"></script>
     <script src="time/orbital.js"></script>
+    <script src="time/pulse.js"></script>
+    <script src="time/constellation.js"></script>
+    <script src="time/fluid.js"></script>
     <script src="script.js"></script>
 </body>
 
