--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <button id="btn-pulse">Pulse</button>
         <button id="btn-constellation">Constellation</button>
         <button id="btn-fluid">Fluid</button>
+        <button id="btn-bounce">Bounce</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/p5@1.11.5/lib/p5.min.js"></script>
@@ -69,6 +70,7 @@
     <script src="time/pulse.js"></script>
     <script src="time/constellation.js"></script>
     <script src="time/fluid.js"></script>
+    <script src="time/bounce.js"></script>
     <script src="script.js"></script>
 </body>
 
